--- a/uci-sails/views/user/queryDone.ejs
+++ b/uci-sails/views/user/queryDone.ejs
@@ -1,5 +1,5 @@
 <input type='text' id='input'>
-<button id='submit-yo' value='submit'></button>
+<button id='submit-yo'>get user</button>
 <div id='info'>THE D</div>
 
 <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
@@ -7,11 +7,11 @@
 $('#submit-yo').click(function(event) {
 	// event.preventDefault(); // prevents page from refreshing
 	$.ajax({
-		url: 'http://localhost:1337/show/' + $('#input').val(),
+		url: '/show/' + $('#input').val(),
 		data: {
 			format: 'json'
 		},
-		success: function (data) {			
+		success: function (data) {
 			$('#info').text(data)
 		},
 	})
