adding in d3 & getting device data via ajax

--- a/uci-sails/views/layout.ejs
+++ b/uci-sails/views/layout.ejs
@@ -30,6 +30,8 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
+    <script src="/js/jquery-2.2.3.min.js"></script>
+    <script src="/js/d3.min.js"></script>
     <!--STYLES END-->
   </head>
 
@@ -60,7 +62,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
@@ -89,6 +91,7 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+
     <!--SCRIPTS END-->
   </body>
 </html>
